# esys-escript.github.io

./: .gitattributes  .gitignore  CLAUDE.md  CREDITS  LICENSE  MPI_INITIALIZATION_EXPLAINED.md  Makefile  README  README.md  README_SUBCOMMUNICATORS.md  README_TESTS  RELEASE_NOTES  SConstruct  autotest  autotest-scons  debian_trilinos_py3  demonstrate_init_order.py  geostats.py  helmholtz.py  index.html  installation.md  itest.sh  mk  poisson.py  publish-docs.sh  run-escript-py.in  run-escript.in  run_escript_py.in  scons_ext.py  test.py  test_independent_subgroups.py  test_subcommunicators.py  tt.py  utest.sh
.github/workflows/: build_arch_docker_testing.yml  build_arch_docker_testing.yml.old  build_arch_trilinos_docker_testing.yml  build_arch_trilinos_docker_testing.yml.old  build_binder_image.yml  build_debian_docker_testing.yml  build_debian_docker_testing.yml.old  build_debian_trilinos_docker_hyb_testing.yml  build_debian_trilinos_docker_hyb_testing.yml.old  build_docker_image.yml  (+23 more)
_sources/: esys.escript.splitworld.rst.txt  esys.pycad.extras.rst.txt  esys.weipa.rst.txt
binder/: Dockerfile  DockerfileMain
branches/complex/branches/numpy/tools/libescriptreader/: bootstrap  configure.ac
branches/complex/branches/numpy/tools/libescriptreader/src/: esdcreate.cpp
branches/complex/branches/numpy/tools/libescriptreader/src/escriptreader/: Mesh.h
branches/numpy/tools/libescriptreader/src/escriptreader/: Makefile.am  Mesh.cpp
bruce/: SConstruct
cusplibrary/: SConscript  VERSION
debian/: Makefile  changelog  changelog.trivial  control  copyright  debhelper-build-stamp  files  include-binaries  install  python-escript-doc.install  python-escript-doc.links  python-escript.install  python-escript.lintian-overrides  python-escript.prerm  python-escript3.postinst  python3-escript-mpi.dirs  python3-escript-mpi.install  python3-escript-mpi.lintian-overrides  python3-escript.manpages  rules
doc/: SConscript  SConstruct  completedevs.tex  copyrights.tex  currentdev.tex  docguide.tex  elist.tex  esysdoc.cls  md2html.py  verinfo.tex
docs/: .buildinfo  api.html  documentation_options.js  esys.downunder.apps.html  esys.downunder.dcresistivityforwardmodeling.html  esys.downunder.domainbuilder.html  esys.downunder.forwardmodels.acoustic.html  esys.downunder.forwardmodels.base.html  esys.downunder.forwardmodels.dcresistivity.html  esys.downunder.forwardmodels.gravity.html  esys.downunder.forwardmodels.html  esys.downunder.forwardmodels.magnetic.html  esys.downunder.forwardmodels.magnetotelluric2d.html  esys.downunder.forwardmodels.pressure.html  esys.downunder.forwardmodels.subsidence.html  esys.downunder.html  esys.downunder.magtel1d.html  esys.downunder.magtel2d.html  esys.downunder.seismic.html  esys.downunder.splitinversioncostfunctions.html  esys.downunder.splitminimizers.html  esys.downunder.splitregularizations.html  esys.dudley.html  esys.escript.datamanager.html  esys.escript.html  esys.escript.linearPDEs.html  esys.escript.modelframe.html  esys.escript.models.html  esys.escript.pdetools.html  esys.escript.splitworld.html  esys.escript.symbolic.html  esys.escript.unitsSI.html  esys.escript.util.html  esys.finley.html  esys.modellib.flow.html  esys.modellib.geometry.html  esys.modellib.html  esys.modellib.input.html  esys.modellib.materials.html  esys.modellib.mechanics.html  (+19 more)
dudley/: SConscript
escript/: SConscript  SConstruct  escript.mk
escriptcore/: SConscript
esys2/: autotest  mk
esysUtils/: SConstruct
finley/: SConscript  SConstruct
localdebian/: changelog  control  copyright  python-escript-doc.doc-base.1  python-escript-doc.doc-base.2  python-escript-doc.doc-base.3  python-escript-doc.doc-base.5  python-escript-doc.doc-base.6  python-escript-doc.examples  python-escript-doc.install  python-escript-mpi.install  python-escript-mpi.lintian-overrides  python-escript.lintian-overrides  python3-escript-mpi.lintian-overrides  rules  watch
make/: Makefile.phony
modellib/: SConstruct  modellib.mk
oxley/: SConscript
p4est/: SConscript  aclocal.m4  configure
paso/: SConscript  SConstruct  paso.mk
pythonMPI/: SConscript
pyvisi/: BUGS  SConstruct  TODO  pythfilter  readme
pyvisi_old/: Doxyfile
release/release_2.0.0/tools/libescriptreader/src/: Makefile.am
ripley/: SConscript
scons/: Babelsberg_nompi_options.py  Babelsberg_options.py  Brocken_options.py  TEMPLATE_linux.py  TEMPLATE_precise.py  TEMPLATE_quantal.py  TEMPLATE_wheezy.py  TEMPLATE_windows.py  ac_options.py  babelsberg_options.py  badger_options.py  badger_py3_options.py  bunya_options.py  capybara_options.py  cgisrv3_options.py  cgisrv6_options.py  cognac_options.py  copper_options.py  custom_options.py  debianpy26_options.py  default_options.py  des_options.py  docker_testing.py  doxygen.py  epicuser2_options.py  epicuser_options.py  ess_options.py  ess_serial_options.py  esys_options.py  ferret_options.py  flatpak_options.py  gcc_options.py  gerbil_options.py  github_ubuntu_options.py  grouptest.py  guineapig_intel_noomp_options.py  guineapig_intel_options.py  guineapig_options.py  guineapig_py2_options.py  guineapig_py3_options.py  (+51 more)
scons_custom_templates/: custom_win32.py
scripts/: agressive_valgrind  escript.supp  extracttests.sh  finley_wrapper_template  prepare.py  py_comp.py  release_sanity.py  trilinos_mpi.sh  trilinos_nompi.sh
site_scons/: dependencies.py  extractdebbuild.py  grouptest.py  site_init.py
speckley/: SConscript
sphinx_api/: conf.py  esys.downunder.forwardmodels.base.rst  esys.downunder.magtel2d.rst  esys.escript.modelframe.rst  esys.escript.pdetools.rst  esys.escript.unitsSI.rst  esys.modellib.input.rst  esys.modellib.rst  esys.modellib.temperature.rst
tools/: testrunner.py
trilinos_build/: mpi.sh  nompi.sh
trilinos_source16/: .gitignore
trilinoswrap/: SConscript
trunk/: FunctionSpace_str_test.py  README_LICENSE  README_TESTS  SConstruct  autodocs.sh  autotest-scons  environment.yaml  ignore.tex  mk  readthedocs.yaml  run-escript.in
trunk-mpi-branch/: SConstruct  autotest-scons
trunk-mpi-branch-V1/: autotest-scons
weipa/: SConscript
(+25771 files in other folders)
